--- a/themes/_theme.scss
+++ b/themes/_theme.scss
@@ -4,8 +4,8 @@
 $mainElement: ":root" !default;
 
 // Typography
-$font-name: "Inter-Regular" !default;
-$font-url: "./fonts/Inter-Regular.woff2" !default;
+$font-name: "Inter" !default;
+$font-url: "./fonts/Inter-???.woff2" !default;
 $font-weight: 400 !default;
 $font-style: normal !default;
 $font-size: 100% !default;
@@ -22,10 +22,118 @@ $dark-background-color: #333 !default;
 
 @mixin loadThemeFont() {
   @include font.loadFont(
-    $font-name,
-    (local: $font-name) (url: $font-url),
-    $font-weight,
-    $font-style
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Thin.woff2", format: "woff2"),
+    100,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-ThinItalic.woff2", format: "woff2"),
+    100,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-ExtraLight.woff2", format: "woff2"),
+    200,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-ExtraLightItalic.woff2", format: "woff2"),
+    200,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Light.woff2", format: "woff2"),
+    300,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-LightItalic.woff2", format: "woff2"),
+    300,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Regular.woff2", format: "woff2"),
+    400,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Italic.woff2", format: "woff2"),
+    400,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Medium.woff2", format: "woff2"),
+    500,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-MediumItalic.woff2", format: "woff2"),
+    500,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-SemiBold.woff2", format: "woff2"),
+    600,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-SemiBoldItalic.woff2", format: "woff2"),
+    600,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Bold.woff2", format: "woff2"),
+    700,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-BoldItalic.woff2", format: "woff2"),
+    700,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-ExtraBold.woff2", format: "woff2"),
+    800,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-ExtraBoldItalic.woff2", format: "woff2"),
+    800,
+    italic
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name) (url: "./fonts/Inter-Black.woff2", format: "woff2"),
+    900,
+    normal
+  );
+  @include font.loadFont(
+    "Inter",
+    (local: $font-name)
+      (url: "./fonts/Inter-BlackItalic.woff2", format: "woff2"),
+    900,
+    italic
   );
 }
 
